Add a close button into buildsvrdialog

--- a/server/buildsvrdialog.ui
+++ b/server/buildsvrdialog.ui
@@ -187,6 +187,13 @@
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="pushButton_close">
+       <property name="text">
+        <string>关闭</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="buildButton">
        <property name="text">
         <string>生成</string>
@@ -198,5 +205,22 @@
   </layout>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>pushButton_close</sender>
+   <signal>clicked()</signal>
+   <receiver>BuildSvrDialog</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>197</x>
+     <y>178</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>149</x>
+     <y>99</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
